--- a/TrafficLight/Base.lproj/Main.storyboard
+++ b/TrafficLight/Base.lproj/Main.storyboard
@@ -1,24 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TrafficLight" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OWH-5Q-twA">
+                                <rect key="frame" x="154" y="745" width="106" height="48"/>
+                                <color key="backgroundColor" systemColor="systemMintColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" systemColor="systemBackgroundColor"/>
+                                </state>
+                                <connections>
+                                    <action selector="startButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="kXK-GL-uHU"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gcg-Z1-kEy">
+                                <rect key="frame" x="132" y="494" width="150" height="150"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Gcg-Z1-kEy" secondAttribute="height" multiplier="1:1" id="2ZF-hT-0mK"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EVM-qR-Phw">
+                                <rect key="frame" x="132" y="336" width="150" height="150"/>
+                                <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="EVM-qR-Phw" secondAttribute="height" multiplier="1:1" id="5Ax-J9-uBB"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3po-GL-1mu">
+                                <rect key="frame" x="132" y="178" width="150" height="150"/>
+                                <color key="backgroundColor" systemColor="systemRedColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="3po-GL-1mu" secondAttribute="height" multiplier="1:1" id="H2K-Ui-z9b"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="3po-GL-1mu" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.167411" id="3H5-CK-AJd"/>
+                            <constraint firstItem="Gcg-Z1-kEy" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.167411" id="Ata-99-mx1"/>
+                            <constraint firstItem="3po-GL-1mu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CJL-lV-kaO"/>
+                            <constraint firstItem="OWH-5Q-twA" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="53:448" id="MWB-0z-DhO"/>
+                            <constraint firstItem="EVM-qR-Phw" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.167411" id="OFx-zx-h6F"/>
+                            <constraint firstItem="Gcg-Z1-kEy" firstAttribute="top" secondItem="EVM-qR-Phw" secondAttribute="bottom" constant="8" id="QmS-51-d9R"/>
+                            <constraint firstItem="EVM-qR-Phw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="W7y-xh-ngP"/>
+                            <constraint firstItem="Gcg-Z1-kEy" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="WEt-LI-0e6"/>
+                            <constraint firstItem="OWH-5Q-twA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ai4-bH-Ngz"/>
+                            <constraint firstItem="3po-GL-1mu" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="134" id="m5f-34-2ED"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="OWH-5Q-twA" secondAttribute="bottom" constant="69" id="mjI-QF-ijE"/>
+                            <constraint firstItem="OWH-5Q-twA" firstAttribute="height" secondItem="8bC-Xf-vdC" secondAttribute="height" multiplier="0.0535714" id="plu-JX-UUr"/>
+                            <constraint firstItem="EVM-qR-Phw" firstAttribute="top" secondItem="3po-GL-1mu" secondAttribute="bottom" constant="8" id="yQC-lv-Nbe"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="VievController" destination="8bC-Xf-vdC" id="mnO-UH-PFL"/>
+                        <outlet property="ViewConroller" destination="8bC-Xf-vdC" id="6PP-6n-vVs"/>
+                        <outlet property="greenLight" destination="Gcg-Z1-kEy" id="zvY-ZB-sqs"/>
+                        <outlet property="redLight" destination="3po-GL-1mu" id="J6B-Oa-Qhp"/>
+                        <outlet property="startButton" destination="OWH-5Q-twA" id="jLF-de-nP8"/>
+                        <outlet property="startbutton" destination="OWH-5Q-twA" id="jeN-IA-4Nd"/>
+                        <outlet property="yellowLight" destination="EVM-qR-Phw" id="vTG-6X-lIV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="34.782608695652179" y="83.705357142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemMintColor">
+            <color red="0.0" green="0.7803921568627451" blue="0.74509803921568629" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
